fix: container overflow

--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,7 @@ body,
   padding: 0;
   margin: 0;
   border: 0;
+
+  overflow-x: hidden;
+  overflow-y: auto;
 }
